--- a/.gitignore
+++ b/.gitignore
@@ -186,7 +186,7 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+.vscode/
 
 # Ruff stuff:
 .ruff_cache/
@@ -205,3 +205,49 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ==========================================================
+#  프론트엔드 (Node.js/JavaScript) 추가
+# ==========================================================
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log
+yarn-error.log
+.pnpm-debug.log*
+
+# Build artifacts
+/dist
+/out
+/build
+/public/dist
+
+# Next.js/React Specific
+.next/
+out/
+
+# ==========================================================
+#  AI / ML (머신러닝) 추가
+# ==========================================================
+# Datasets and large binary files
+data/
+datasets/
+*.csv
+*.tsv
+*.parquet
+
+# Trained models and checkpoints
+models/
+model_weights/
+*.h5
+*.pth
+*.pt
+*.onnx
+
+# Experiment logs and results
+results/
+logs/
+checkpoints/
+tensorboard/
+runs/
