--- a/k8s/app-configmap.yaml
+++ b/k8s/app-configmap.yaml
@@ -11,3 +11,6 @@ data:
   REFRESH_TOKEN_EXPIRE_MINUTES: "10080"
   PASSWORD_HASH_SCHEME: argon2
   CORS_ORIGINS: http://localhost:8000,http://127.0.0.1:8000
+  LLM_BASE_URL: http://llm:11434
+  LLM_MODEL: llama3
+  LLM_TEMPERATURE: "0.3"
