--- a/k8s/app-secrets.yaml
+++ b/k8s/app-secrets.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: dating-app
 type: Opaque
 stringData:
-  JWT_SECRET_KEY: t3Zj7EnlO1WSyDbfb5fR3Xbx5y2zzU__OgQcqdarf0SavJo1IvIl6byMAKT_kSaU
+  JWT_SECRET_KEY: change_me_to_secure_value
   JWT_ALGORITHM: HS256
-  KAKAO_MAP_APP_KEY: 983a32c198c315207c271fec41037869
+  KAKAO_MAP_APP_KEY: your_kakao_map_app_key
