--- a/k8s/mongo-statefulset.yaml
+++ b/k8s/mongo-statefulset.yaml
@@ -39,11 +39,11 @@ spec:
               mountPath: /data/db
           resources:
             requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
+              cpu: 200m
               memory: 512Mi
+            limits:
+              cpu: 1
+              memory: 2Gi
   volumeClaimTemplates:
     - metadata:
         name: mongo-data
