--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,5 @@ pydantic==2.4.2
 pydantic-settings==2.0.3
 python-multipart==0.0.9
 email-validator==2.1.0.post1
+langchain==0.1.17
+langchain-community==0.0.36
