--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -41,5 +41,6 @@ spec:
               cpu: 100m
               memory: 256Mi
             limits:
-              cpu: 500m
+              cpu: 400m
               memory: 512Mi
+      restartPolicy: Always
