--- a/.github/workflows/backend-quality.yml
+++ b/.github/workflows/backend-quality.yml
@@ -40,8 +40,9 @@ jobs:
 
       - name: Install project dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
+          pip install --no-deps starlette==0.49.1
           pip install ruff pytest pytest-cov httpx asgi-lifespan
 
       - name: Lint with ruff
