--- a/.github/workflows/experience-sanity.yml
+++ b/.github/workflows/experience-sanity.yml
@@ -36,8 +36,9 @@ jobs:
 
       - name: Install validation dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
+          pip install --no-deps starlette==0.49.1
 
       - name: Run experience quality checks
         run: python scripts/validate_experience.py
