--- a/.github/workflows/journey-regression.yml
+++ b/.github/workflows/journey-regression.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Install scenario requirements
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
+          pip install --no-deps starlette==0.49.1
           pip install pytest httpx asgi-lifespan
 
       - name: Run couple journey scenarios
