--- a/.github/workflows/llm-contract.yml
+++ b/.github/workflows/llm-contract.yml
@@ -34,8 +34,9 @@ jobs:
 
       - name: Install contract test requirements
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
+          pip install --no-deps starlette==0.49.1
           pip install pytest
 
       - name: Validate LLM prompt contracts
