--- a/.github/workflows/security-baseline.yml
+++ b/.github/workflows/security-baseline.yml
@@ -30,13 +30,15 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install security tooling
+      - name: Install security tooling and dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install pip-audit bandit
+          pip install -r backend/requirements.txt
+          pip install --no-deps starlette==0.49.1
 
       - name: Audit Python dependencies
-        run: pip-audit -r backend/requirements.txt
+        run: pip-audit
 
       - name: Static security scan
         run: bandit -r backend/app -ll
