--- a/.github/workflows/backend-quality.yml
+++ b/.github/workflows/backend-quality.yml
@@ -1,10 +1,31 @@
+# ============================================================================
+# Backend Quality Workflow
+# ============================================================================
+# 목적: 백엔드 코드의 품질을 검증하는 워크플로우
+# 
+# 주요 기능:
+#   1. 코드 린팅 (ruff check) - 코드 스타일 및 잠재적 오류 검사
+#   2. 코드 포맷팅 검사 (ruff format) - 일관된 코드 스타일 유지
+#   3. 단위 테스트 실행 및 커버리지 측정 (pytest)
+#   4. Journey 회귀 테스트 - 통합 시나리오 테스트
+#   5. LLM 프롬프트 계약 테스트 - LLM 응답 형식 검증
+#   6. OpenAPI 스펙 검증 - API 계약 준수 확인
+#   7. 사용자 경험 품질 검증 - 스크립트 기반 검증
+#   8. 커버리지 리포트 생성 및 아티팩트 업로드
+#
+# 실행 조건:
+#   - backend/** 경로의 파일이 변경될 때
+#   - 테스트 설정 파일(mypy.ini, pytest.ini)이 변경될 때
+#   - 검증 스크립트가 변경될 때
+#   - 수동 실행 (workflow_dispatch)
+# ============================================================================
+
 name: Backend Quality
 
 on:
   push:
     paths:
       - "backend/**"
-      - "backend/tests/**"
       - "mypy.ini"
       - "pytest.ini"
       - "scripts/validate_experience.py"
@@ -13,52 +34,95 @@ on:
   pull_request:
     paths:
       - "backend/**"
-      - "backend/tests/**"
       - "mypy.ini"
       - "pytest.ini"
       - "scripts/validate_experience.py"
       - "scripts/validate_openapi.py"
       - ".github/workflows/backend-quality.yml"
-  workflow_dispatch:
+  workflow_dispatch:  # GitHub Actions UI에서 수동 실행 가능
+  workflow_call:  # 다른 워크플로우에서 호출 가능
 
+# 환경 변수 설정
 env:
   PYTHON_VERSION: "3.11"
+  STARLETTE_VERSION: "0.49.1"
 
 jobs:
+  # 백엔드 품질 검증 작업
   quality:
     runs-on: ubuntu-latest
     steps:
+      # 저장소 코드 체크아웃
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Python 환경 설정 및 pip 캐시 활성화 (빌드 시간 단축)
       - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: "pip"
+          cache: "pip"  # pip 패키지 캐싱으로 설치 시간 단축
           cache-dependency-path: backend/requirements.txt
 
+      # 프로젝트 의존성 및 테스트 도구 설치
       - name: Install project dependencies
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
-          pip install --no-deps starlette==0.49.1
-          pip install ruff pytest pytest-cov httpx asgi-lifespan
+          pip install --no-deps starlette==${{ env.STARLETTE_VERSION }}  # 보안 패치 적용
+          pip install ruff pytest pytest-cov httpx asgi-lifespan  # 린터, 테스트, HTTP 클라이언트
 
+      # 코드 린팅: 코드 스타일 및 잠재적 오류 검사
       - name: Lint with ruff
         run: ruff check backend/app backend/tests
+        continue-on-error: false  # 실패 시 워크플로우 중단
 
+      # 코드 포맷팅 검사: 일관된 코드 스타일 유지 확인
       - name: Format check with ruff
         run: ruff format --check backend/app backend/tests
+        continue-on-error: false
 
+      # 단위 테스트 실행 및 커버리지 측정
+      # --maxfail=1: 첫 번째 실패 시 즉시 중단
+      # --cov: 커버리지 측정, --cov-report: XML과 터미널 리포트 생성
       - name: Run pytest with coverage
-        run: pytest backend/tests --maxfail=1 --disable-warnings --cov=backend.app --cov-report=xml
+        run: pytest backend/tests --maxfail=1 --disable-warnings --cov=backend.app --cov-report=xml --cov-report=term
+        continue-on-error: false
 
+      # Journey 회귀 테스트 실행 (통합 테스트)
+      - name: Run journey regression tests
+        run: pytest backend/tests/journey -m journey --disable-warnings -q --maxfail=1
+        continue-on-error: false
+
+      # LLM 프롬프트 계약 테스트 실행
+      - name: Run LLM contract tests
+        run: pytest backend/tests/llm -m contract --disable-warnings -q --maxfail=1
+        continue-on-error: false
+
+      # OpenAPI 스펙 검증: API 계약이 올바르게 정의되었는지 확인
       - name: Validate OpenAPI contract
         run: python scripts/validate_openapi.py
+        continue-on-error: false
 
+      # 사용자 경험 품질 검증 (스크립트 기반)
+      - name: Validate experience quality
+        run: python scripts/validate_experience.py
+        continue-on-error: false
+
+      # 커버리지 리포트를 아티팩트로 업로드 (테스트 실패 여부와 관계없이)
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
+        if: always()  # 이전 단계 실패 여부와 관계없이 실행
         with:
           name: backend-coverage
           path: coverage.xml
+          retention-days: 7  # 7일간 보관
+
+      # GitHub Actions Summary에 커버리지 리포트 링크 추가
+      - name: Coverage Summary
+        if: always()
+        run: |
+          if [ -f coverage.xml ]; then
+            echo "## Coverage Report" >> $GITHUB_STEP_SUMMARY
+            echo "Coverage XML artifact uploaded successfully." >> $GITHUB_STEP_SUMMARY
+          fi
