--- a/.github/workflows/db-connection-test.yml
+++ b/.github/workflows/db-connection-test.yml
@@ -11,7 +11,10 @@
 #   5. 지오스패셜 쿼리 테스트 (MongoDB)
 #
 # 실행 조건:
-#   - backend/** 경로의 파일이 변경될 때
+#   - DB 연결 관련 파일이 변경될 때만 실행
+#     * 테스트 파일: backend/tests/db/**
+#     * DB 연결 코드: backend/app/db/**
+#   - 워크플로우 파일 자체가 변경될 때
 #   - 수동 실행 (workflow_dispatch)
 # ============================================================================
 
@@ -20,11 +23,19 @@ name: Database Connection Test
 on:
   push:
     paths:
-      - "backend/**"
+      # DB 연결 테스트 파일
+      - "backend/tests/db/**"
+      # DB 연결 코드
+      - "backend/app/db/**"
+      # 워크플로우 파일
       - ".github/workflows/db-connection-test.yml"
   pull_request:
     paths:
-      - "backend/**"
+      # DB 연결 테스트 파일
+      - "backend/tests/db/**"
+      # DB 연결 코드
+      - "backend/app/db/**"
+      # 워크플로우 파일
       - ".github/workflows/db-connection-test.yml"
   workflow_dispatch:  # GitHub Actions UI에서 수동 실행 가능
   workflow_call:  # 다른 워크플로우에서 호출 가능
