Clear API keys in .env.example
Remove sensitive API keys from the example environment file.

--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ REFRESH_TOKEN_EXPIRE_MINUTES=10080
 PASSWORD_HASH_SCHEME=argon2
 
 # Kakao Maps API
-KAKAO_MAP_APP_KEY=12a9629f0b026f97c5c0671cbd3039c8
-KAKAO_REST_API_KEY=485a6993a82ba4a2382a21e995d321af
+KAKAO_MAP_APP_KEY=
+KAKAO_REST_API_KEY=
 
 # OpenWeatherMap API (날씨 정보)
 # 무료 tier: https://openweathermap.org/
-OPENWEATHER_API_KEY=3b71f2be9de7c66d5afd752f51caf329
+OPENWEATHER_API_KEY=
 
 # CORS 설정 (쉼표로 구분)
 CORS_ORIGINS=http://localhost:8000,http://localhost:3000,http://localhost
