Remove Kakao Map API key
Remove Kakao Map API key from .env.old file.

--- a/.env.old
+++ b/.env.old
@@ -13,7 +13,7 @@ REFRESH_TOKEN_EXPIRE_MINUTES=10080
 PASSWORD_HASH_SCHEME=argon2
 
 # Kakao 지도 API 키
-KAKAO_MAP_APP_KEY=12a9629f0b026f97c5c0671cbd3039c8
+KAKAO_MAP_APP_KEY=
 
 # Local LLM / LangChain
 LLM_BASE_URL=http://llm:11434
