--- a/.github/workflows/security-baseline.yml
+++ b/.github/workflows/security-baseline.yml
@@ -52,8 +52,14 @@ jobs:
       pull-requests: read  # PR 읽기 권한 (gitleaks PR 스캔용)
     steps:
       # 저장소 코드 체크아웃
+      # fetch-depth: 0은 전체 Git 히스토리를 가져와서 gitleaks가 PR 커밋 범위를 스캔할 수 있게 함
+      # PR 이벤트의 경우 base와 head 커밋을 모두 가져오기 위해 필요
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 전체 히스토리 가져오기 (gitleaks PR 스캔에 필요)
+          # PR 이벤트에서 base 브랜치의 커밋도 가져오기 위해 추가 설정
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       # Python 환경 설정 및 pip 캐시 활성화
       - name: Set up Python ${{ env.PYTHON_VERSION }}
