--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,7 +50,7 @@ on:
 
 env:
   KUBERNETES_NAMESPACE: dating-app
-  IMAGE_NAME: ghcr.io/${{ github.repository }}/dating-app-api
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/dating-app-api
 
 jobs:
   # Docker 이미지 빌드 및 푸시
