--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ on:
         type: string
 
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}/dating-app-api
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/dating-app-api
 
 jobs:
   # 릴리즈 생성 작업
