챌린지 기능 개발 수정(gps기반)/ ver1.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ LLM_TEMPERATURE=0.2
 
 # CORS 허용 오리진(쉼표 구분)
 CORS_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+
+# 관리자 이메일 설정
+ADMIN_EMAIL=your-admin@email.com
