--- a/.env.old
+++ b/.env.old
@@ -13,7 +13,8 @@ REFRESH_TOKEN_EXPIRE_MINUTES=10080
 PASSWORD_HASH_SCHEME=argon2
 
 # Kakao 지도 API 키
-KAKAO_MAP_APP_KEY=
+KAKAO_MAP_APP_KEY="enter_your_kakao_map_api_key_here"
+KAKAO_REST_API_KEY="enter_your_kakao_rest_api_key_here"
 
 # Local LLM / LangChain
 LLM_BASE_URL=http://llm:11434
