--- a/k8s/app-secrets.yaml
+++ b/k8s/app-secrets.yaml
@@ -8,3 +8,5 @@ stringData:
   JWT_SECRET_KEY: change_me_to_secure_value
   JWT_ALGORITHM: HS256
   KAKAO_MAP_APP_KEY: your_kakao_map_app_key
+  KAKAO_REST_API_KEY: your_kakao_rest_api_key
+  OPENWEATHER_API_KEY: your_openweather_api_key
