--- a/.github/workflows/auth-flow-test.yml
+++ b/.github/workflows/auth-flow-test.yml
@@ -26,32 +26,26 @@ name: Authentication Flow Test
 on:
   push:
     paths:
-      # 인증 테스트 파일
+      # 인증 테스트 파일만 변경 시 실행
       - "backend/tests/auth/**"
-      # 인증 API 라우트
+      # 인증 관련 코드
       - "backend/app/api/routes/auth.py"
-      # 인증/보안 코어 코드
       - "backend/app/core/auth.py"
       - "backend/app/core/security.py"
-      # 사용자 서비스
       - "backend/app/services/users.py"
-      # 워크플로우 파일
       - ".github/workflows/auth-flow-test.yml"
   pull_request:
     paths:
-      # 인증 테스트 파일
+      # 인증 테스트 파일만 변경 시 실행
       - "backend/tests/auth/**"
-      # 인증 API 라우트
+      # 인증 관련 코드
       - "backend/app/api/routes/auth.py"
-      # 인증/보안 코어 코드
       - "backend/app/core/auth.py"
       - "backend/app/core/security.py"
-      # 사용자 서비스
       - "backend/app/services/users.py"
-      # 워크플로우 파일
       - ".github/workflows/auth-flow-test.yml"
-  workflow_dispatch:  # GitHub Actions UI에서 수동 실행 가능
-  workflow_call:  # 다른 워크플로우에서 호출 가능
+  workflow_dispatch:
+  workflow_call:
 
 env:
   PYTHON_VERSION: "3.11"
