--- a/.github/workflows/auth-flow-test.yml
+++ b/.github/workflows/auth-flow-test.yml
@@ -114,6 +114,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r backend/requirements.txt
+          # 의존성 충돌 검사
+          pip check || (echo "❌ 의존성 충돌이 발견되었습니다!" && exit 1)
           pip install --no-deps starlette==${{ env.STARLETTE_VERSION }}
           pip install pytest pytest-asyncio httpx asgi-lifespan
 
