--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
 fastapi==0.116.0
 uvicorn[standard]==0.32.0
-h11>=0.16.0
 pymongo==4.10.1
 motor==3.7.0
 redis[hiredis]==5.0.1
@@ -14,5 +13,6 @@ email-validator==2.1.1
 langchain==0.3.26
 langchain-community==0.3.27
 langchain-text-splitters==0.3.9
-httpx==0.25.0
+httpx>=0.27.0
+h11>=0.16.0
 # Starlette is upgraded separately to 0.49.1 (see CI) to address GHSA advisories while FastAPI metadata is updated upstream.
