--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,21 @@
-fastapi==0.103.2
-uvicorn[standard]==0.23.2
-motor==3.3.1
+fastapi==0.116.0
+uvicorn[standard]==0.32.0
+pymongo==4.10.1
+motor==3.7.0
 redis[hiredis]==5.0.1
-pymongo==4.5.0
 passlib[bcrypt]==1.7.4
 argon2-cffi==23.1.0
 PyJWT==2.8.0
-pydantic==2.4.2
-pydantic-settings==2.0.3
-python-multipart==0.0.9
-email-validator==2.1.0.post1
-langchain==0.1.17
-langchain-community==0.0.36
+pydantic==2.9.2
+pydantic-settings>=2.10.1,<3.0.0  # Updated for langchain-community 0.4.1 compatibility
+python-multipart==0.0.18
+email-validator==2.1.1
+langchain>=1.0.0
+langchain-community>=0.4.1  # Latest available version (1.0.0 doesn't exist)
+langchain-text-splitters>=1.0.0
+langchain-core>=1.0.0  # Fix for GHSA-6qv9-48xg-fc7f (template injection vulnerability)
+httpx>=0.28.1  # Updated to support h11>=0.16.0 (fixes GHSA-vqfr-h8mv-ghfj)
+h11>=0.16.0  # Fix for GHSA-vqfr-h8mv-ghfj (request smuggling vulnerability)
+requests>=2.32.5,<3.0.0  # Compatibility: google-genai>=2.28.1, langchain-community>=2.32.5
+google-genai==0.2.2
+# Starlette is upgraded separately to 0.49.1 (see CI) to address GHSA advisories while FastAPI metadata is updated upstream.
