--- a/k8s/app-secrets.example.yaml
+++ b/k8s/app-secrets.example.yaml
@@ -10,3 +10,4 @@ stringData:
   KAKAO_MAP_APP_KEY: your_kakao_map_app_key
   KAKAO_REST_API_KEY: your_kakao_rest_api_key
   OPENWEATHER_API_KEY: your_openweather_api_key
+  GEMINI_API_KEY: your_gemini_api_key
