--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -100,14 +100,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha  # GitHub Actions 캐시 사용
           cache-to: type=gha,mode=max
-          platforms: linux/amd64  # 필요시 linux/arm64 추가 가능
-
-      # 이미지 취약점 스캔 (Trivy) - PR이 아닐 때만
+          platforms: linux/amd64  # 필요시 linux/arm64 추가 가능      # 이미지 취약점 스캔 (Trivy) - PR이 아닐 때만
       - name: Run Trivy vulnerability scanner
         if: github.event_name != 'pull_request'
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
