--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -55,6 +55,7 @@ jobs:
     permissions:
       contents: read
       packages: write  # GHCR에 푸시하기 위한 권한
+      security-events: write  # CodeQL SARIF 업로드를 위한 권한
 
     steps:
       # 저장소 코드 체크아웃
@@ -100,14 +101,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha  # GitHub Actions 캐시 사용
           cache-to: type=gha,mode=max
-          platforms: linux/amd64  # 필요시 linux/arm64 추가 가능
-
-      # 이미지 취약점 스캔 (Trivy) - PR이 아닐 때만
+          platforms: linux/amd64  # 필요시 linux/arm64 추가 가능      # 이미지 취약점 스캔 (Trivy) - PR이 아닐 때만
       - name: Run Trivy vulnerability scanner
         if: github.event_name != 'pull_request'
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
@@ -115,7 +114,7 @@ jobs:
       # Trivy 스캔 결과 업로드
       - name: Upload Trivy results to GitHub Security
         if: github.event_name != 'pull_request' && always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: 'trivy-results.sarif'
 
