--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,12 +50,15 @@ on:
 
 env:
   KUBERNETES_NAMESPACE: dating-app
-  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/dating-app-api
+  IMAGE_NAME: ghcr.io/${{ github.repository }}/dating-app-api
 
 jobs:
   # Docker 이미지 빌드 및 푸시
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write  # GHCR에 푸시하기 위한 권한
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -74,7 +77,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}/dating-app-api
+          images: ${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=sha,prefix=develop_branch-
@@ -86,6 +89,8 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          build-args: |
+            GITHUB_REPOSITORY=https://github.com/${{ github.repository }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
