--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -53,10 +53,11 @@ jobs:
   # 리포지토리 Settings > Environments > production에서 승인자 설정 필요
   approval:
     runs-on: ubuntu-latest
+    # workflow_dispatch일 때는 항상 실행 (skip_approval이 false일 때)
+    # workflow_run일 때는 CI 성공 시에만 실행
     if: |
-      (github.event.workflow_run.conclusion == 'success' ||
-       github.event_name == 'workflow_dispatch') &&
-      !github.event.inputs.skip_approval
+      (github.event_name == 'workflow_dispatch' && !github.event.inputs.skip_approval) ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     environment:
       name: production
       url: https://api.yourdomain.com  # 실제 프로덕션 URL
@@ -69,6 +70,11 @@ jobs:
             exit 1
           fi
           echo "✅ CI Integration passed. Proceeding to approval."
+      
+      - name: Skip approval check (workflow_dispatch)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "✅ Skipping approval check for manual workflow dispatch. Proceeding to deployment."
       
       # GitHub 환경 보호 규칙을 사용하여 승인 처리
       # 리포지토리 Settings > Environments > production에서 승인자 설정 필요
@@ -92,10 +98,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [approval]
+    # workflow_dispatch일 때는 skip_approval이 true이거나 approval이 성공하면 실행
+    # workflow_run일 때는 CI 성공하고 approval이 성공하면 실행
     if: |
-      (github.event.workflow_run.conclusion == 'success' ||
-       github.event_name == 'workflow_dispatch') &&
-      (github.event.inputs.skip_approval == true || needs.approval.result == 'success')
+      (github.event_name == 'workflow_dispatch' && 
+       (github.event.inputs.skip_approval == true || needs.approval.result == 'success')) ||
+      (github.event_name == 'workflow_run' && 
+       github.event.workflow_run.conclusion == 'success' && 
+       needs.approval.result == 'success')
     
     environment:
       name: production
