--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -193,7 +193,10 @@ jobs:
       - name: Configure Kubernetes (Local)
         if: steps.check-kubeconfig.outputs.mode == 'local'
         run: |
-          # kind 클러스터의 kubeconfig는 자동으로 설정됨
+          # kind 클러스터의 kubeconfig 설정
+          mkdir -p $HOME/.kube
+          kind get kubeconfig --name dating-app-dev > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
           kubectl cluster-info
           kubectl get nodes
 
@@ -201,6 +204,8 @@ jobs:
       - name: Load Docker image to kind cluster
         if: steps.check-kubeconfig.outputs.mode == 'local'
         run: |
+          # KUBECONFIG 설정
+          export KUBECONFIG=$HOME/.kube/config
           # GHCR에서 이미지를 pull하여 kind 클러스터에 로드
           docker pull ${{ env.IMAGE_NAME }}:${{ steps.image-tag.outputs.tag }} || docker pull ${{ env.IMAGE_NAME }}:develop_branch
           kind load docker-image ${{ env.IMAGE_NAME }}:${{ steps.image-tag.outputs.tag }} --name dating-app-dev || \
