--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -173,6 +173,10 @@ jobs:
       - name: Configure Kubernetes (Local)
         if: steps.check-kubeconfig.outputs.mode == 'local'
         run: |
+          # kind 클러스터의 kubeconfig 설정
+          mkdir -p $HOME/.kube
+          kind get kubeconfig --name dating-app-prod > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
           kubectl cluster-info
           kubectl get nodes
 
@@ -180,6 +184,8 @@ jobs:
       - name: Load Docker image to kind cluster
         if: steps.check-kubeconfig.outputs.mode == 'local'
         run: |
+          # KUBECONFIG 설정
+          export KUBECONFIG=$HOME/.kube/config
           docker pull ${{ env.IMAGE_NAME }}:${{ steps.image-tag.outputs.tag }} || docker pull ${{ env.IMAGE_NAME }}:latest
           kind load docker-image ${{ env.IMAGE_NAME }}:${{ steps.image-tag.outputs.tag }} --name dating-app-prod || \
           kind load docker-image ${{ env.IMAGE_NAME }}:latest --name dating-app-prod || \
